# restreamer

./: Cargo.toml  rustfmt.toml
smf/: dvr-restream.xml
src/: config.rs  main.rs
