[package]
name = "dvr-restream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
bytes = "1.10.0"
dropshot = "0.16"
futures-util = "0.3.31"
http-body-util = "0.1.2"
hyper = "1.6"
illumos-priv = "0.2.0"
schemars = "0.8.22"
serde = "1.0.218"
slog = "2.7.0"
structopt = "0.3.26"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
toml = "0.8.20"
