[package]
name = "dvr-restream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.1"
dropshot = "0.16"
futures-util = "0.3.31"
http-body-util = "0.1.3"
hyper = "1.8"
illumos-priv = "0.2.0"
schemars = "0.8"
serde = "1.0.228"
slog = "2.8.2"
structopt = "0.3.26"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
toml = "0.9.11"
